@@ -13,6 +13,8 @@ changes made.  See document footer for additional details.
 --- 202X-XX-XX  Release 7.3X.X                                     ---
 ----------------------------------------------------------------------
 
+* add 'search' -s option to silence extra printing - Chris McGregor
+* update 'search' command to print amt of found items - Chris McGregor
 * fixed asc2g/g2asc support for brep primitives - Cliff Yapp
 * fixed dsp terrain file data loading for relative paths - Cliff Yapp
 
